enforce jwt auth,create folders for api ,add unit test
