# docs/swagger.json
@@ -34,10 +34,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/api/v1/to-do/delete": {
-            "post": {
+            },
+            "delete": {
                 "description": "delete single/multiple to-do items",
                 "consumes": [
                     "application/json"
@@ -56,6 +54,17 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "ids collection",
+                        "name": "_ids",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -65,7 +74,7 @@
                 }
             }
         },
-        "/api/v1/to-do/list/{user_id}": {
+        "/api/v1/to-do/list": {
             "get": {
                 "description": "list to-do items by user",
                 "consumes": [
